# named_model_resolution

./: .gitignore  CLAUDE.md  Insights Pipeline Walkthrough.ipynb  README.md  dataset_config.json  main.py  payload_report.py  pyproject.toml
.claude/: settings.local.json
insights_runner/: pipeline.py
insights_runner/output/: builder.py  html_report.py  models.py
insights_runner/quality_gate/: assessor.py  checks.py  thresholds.yaml
insights_runner/runners/: _data_normalizer.py  _measure_selector.py  bocpd_runner.py  mmm_runner.py
named_model_resolution/: column_matcher.py  models.py  pyproject.toml
named_model_resolution/named_model_resolution/: catalog_parser.py  column_matcher.py
named_model_resolution/src/named_model_resolution/: __init__.py  classifier.py  config_assembler.py
orchestrator/: __init__.py  profiler.py  pyproject.toml  router.py
orchestrator/connectors/: file_connector.py  sql_connector.py
orchestrator/orchestrator/: profiler.py  router.py
orchestrator/orchestrator/pipelines/: __init__.py  psi_pipeline.py
orchestrator/src/orchestrator/: __init__.py
orchestrator/src/orchestrator/connectors/: __init__.py  base.py
orchestrator/src/orchestrator/pipelines/: arima_pipeline.py  base.py  bocpd_pipeline.py  mmm_pipeline.py
pharma_knowledge_base/: gold_layer_datamarts.csv
pharma_knowledge_base/configs/: abbreviations.yaml  candidates.yaml  model_routing.yaml  transform_rules.yaml
pipeline/: bocpd.py  config.py  data_prep.py  dataset_config.py  insights.py  integration.py  mmm_data_prep.py  mmm_fit.py  validation.py
