[project]
name = "named-model-resolution"
version = "0.1.0"
description = "Heuristics-based config-builder and column classifier for pharma gold-layer datasets"
authors = [
    { name = "Aaditya Vardhan", email = "aaditya.das@procdna.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
# Heavy model-pipeline deps (BOCPD + MMM).
# Databricks: %pip install -e {repo}[pipeline] --quiet
# Local:      pip install -e ".[pipeline]"
pipeline = [
    "arviz==1.1.0",
    "arviz-base==1.1.0",
    "arviz-plots==1.1.0",
    "arviz-stats==1.1.0",
    "bayesian-changepoint-detection==0.2.dev1",
    "h5netcdf==1.8.1",
    "netcdf4==1.7.4",
    "pymc==6.0.1",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["pharma_knowledge_base*", "*.egg-info", "sample_data*", "output*"]
