[project]
name = "named-model-resolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aaditya Vardhan", email = "aaditya.das@procdna.com" }
]
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
