[project]
name = "orchestrator"
version = "0.1.0"
description = "Data-aware model router orchestrator — wires catalog connectors, profiler, and model pipelines"
authors = [
    { name = "Aaditya Vardhan", email = "aaditya.das@procdna.com" }
]
requires-python = ">=3.10"
dependencies = [
    "named-model-resolution",
    "pandas>=2.0",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
